data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_182.wast
;; 3. **`br_table` with Incorrect Label Resolution**:    - **Description**: Test a `br_table` instruction within a loop having multiple nested blocks and loops, where the `br_table` mislabels and branches to an unintended target due to incorrect label resolution.    - **Constraint**: Correct fall-through to the default target when the operand is out of bounds; accurate branching based on label entries.

(assert_invalid
  (module
    (func $br_table_test
      (local i32)
      (block $outer
        (loop $inner
          (block $nested
            (br_table $nested $outer $inner (local.get 0))
          )
        )
      )
    )
  )
  "type mismatch"
)